--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "postcss": "^8.4.24",
+    "sharp": "^0.34.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5"
   }
